tests/invalid/non_void_if_missing_return.wio
fn Broken(condition: bool) -> i32 {
    if (condition) {
        return 1;
    }
}

fn Entry() -> i32 {
    return Broken(true);
}
